--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "soundplay",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://nehoil.github.io/SoundPlayLive",
+  "homepage": " https://nehoil.github.io/SoundPlayLive",
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
     "@testing-library/jest-dom": "^5.11.8",
@@ -25,13 +25,12 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -52,6 +51,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "3.1.0"
+    "gh-pages": "^3.1.0"
   }
 }
