--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "soundplay",
   "version": "0.1.0",
   "private": true,
-  "homepage": " https://nehoil.github.io/SoundPlayLive",
+  "homepage": "https://nehoil.github.io/SoundPlayLive",
   "dependencies": {
     "@ant-design/icons": "^4.3.0",
     "@testing-library/jest-dom": "^5.11.8",
@@ -11,6 +11,7 @@
     "antd": "^4.10.2",
     "axios": "^0.21.1",
     "craco-less": "^1.17.1",
+    "gh-pages": "^3.1.0",
     "less-loader": "^7.2.1",
     "node-sass": "^4.14.1",
     "react": "^17.0.1",
@@ -49,8 +50,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^3.1.0"
   }
 }
